apps/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: dash 
    hajimari.io/icon: web
spec:
  ingressClassName: nginx
  rules:
    - host: &host dash.kleinsorge.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: dashboard
                port:
                  number: 80
  tls:
    - secretName: dashboard-tls-certificate
      hosts:
        - *host
